# src/clients/web/openapi.json
@@ -3137,64 +3137,6 @@
           }
         }
       },
-      "post": {
-        "tags": [
-          "ProjectConversations"
-        ],
-        "parameters": [
-          {
-            "name": "projectId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/ProjectConversationCreateRequest"
-              }
-            },
-            "text/json": {
-              "schema": {
-                "$ref": "#/components/schemas/ProjectConversationCreateRequest"
-              }
-            },
-            "application/*+json": {
-              "schema": {
-                "$ref": "#/components/schemas/ProjectConversationCreateRequest"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/ApiResultOfProjectConversationSummaryResponse"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ApiResultOfProjectConversationSummaryResponse"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ApiResultOfProjectConversationSummaryResponse"
-                }
-              }
-            }
-          }
-        }
-      },
       "delete": {
         "tags": [
           "ProjectConversations"
@@ -7887,40 +7829,6 @@
           }
         }
       },
-      "ApiResultOfProjectConversationSummaryResponse": {
-        "required": [
-          "code",
-          "title",
-          "detail",
-          "contentType"
-        ],
-        "type": "object",
-        "properties": {
-          "data": {
-            "oneOf": [
-              {
-                "type": "null"
-              },
-              {
-                "$ref": "#/components/schemas/ProjectConversationSummaryResponse"
-              }
-            ]
-          },
-          "code": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "title": {
-            "type": "string"
-          },
-          "detail": {
-            "type": [
-              "null",
-              "string"
-            ]
-          }
-        }
-      },
       "ApiResultOfProjectConversationSummaryResponse[]": {
         "required": [
           "code",
@@ -10483,20 +10391,6 @@
           "connectionId": {
             "type": "string",
             "format": "uuid"
-          }
-        }
-      },
-      "ProjectConversationCreateRequest": {
-        "required": [
-          "contextId"
-        ],
-        "type": "object",
-        "properties": {
-          "contextId": {
-            "type": [
-              "null",
-              "string"
-            ]
           }
         }
       },
